fdo#76470: Avoid joining new formula cells individually.

Instead, insert the formula cells in the group first, then only try to join
the top and bottom cells afterward. Otherwise the grouping would get messed
up and a problem would ensue.

Change-Id: I4fdd5326c029032a636d8225b5fb16cbde427c7d